--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,22 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://ghcdn.rawgit.org/NguyenLuongok/css-js-ass-admin/master/css/demo-page.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-ass-admin/1a8915bbce0728c82c753de96d960b2857a8e735/css/examples.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-ass-admin/1a8915bbce0728c82c753de96d960b2857a8e735/css/hover.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-ass-admin/1a8915bbce0728c82c753de96d960b2857a8e735/css/magnific-popup.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-ass-admin/1a8915bbce0728c82c753de96d960b2857a8e735/css/style-admin.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/easy-responsive-tabs.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/team.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/js/modernizr.custom.js"></script>
+    <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/style.css" rel="stylesheet" type="text/css" media="all" />
+  </head>
+
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,6 +44,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
