--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
     <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/easy-responsive-tabs.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/team.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/js/modernizr.custom.js"></script>
+    <!-- <script src="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/js/modernizr.custom.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script> -->
     <link href="https://rawcdn.githack.com/NguyenLuongok/css-js-assigment/b21bd24beb879355c9ce1312164a974bd46ec758/css/style.css" rel="stylesheet" type="text/css" media="all" />
   </head>
 
